package hcmute.edu.zentech.model;

public enum InventoryTransactionReason {
    NEW_STOCK,
    ADJUSTMENT_ADD,
    CUSTOMER_ORDER,
    DAMAGED,
    ADJUSTMENT_SUB,
    RETURN
}
