package hcmute.edu.zentech.model;

public enum InventoryTransactionType {
    IMPORT,
    EXPORT
}
